--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>About Me</title>
-    <base href = "fengxiong322.github.io\"><script type="text/javascript" src="interactions.js"></script>
+    <base href = "https://fengxiong322.github.io/"><script type="text/javascript" src="interactions.js"></script>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="htmllayout.css">
     <style type="text/css">
