--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Feng's Portfolio</title>
-		<base href = "fengxiong322.github.io\">
+		<base href = "https://fengxiong322.github.io/">
     <script type="text/javascript" src="interactions.js"></script>
 		<link rel="stylesheet" href="htmllayout.css">
 		<link rel="icon" href="favicon.ico">
