--- a/OOP/Advanced1/advanced.html
+++ b/OOP/Advanced1/advanced.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Feng's Portfolio</title>
-  <base href = "fengxiong322.github.io\"><script type="text/javascript" src="interactions.js"></script>
+  <base href = "https://fengxiong322.github.io/"><script type="text/javascript" src="interactions.js"></script>
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="htmllayout.css">
 </head>
