--- a/OOP/OOP-L1-Feng/OOPLesson1.html
+++ b/OOP/OOP-L1-Feng/OOPLesson1.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>OOP Lesson 1</title>
-      <base href = "fengxiong322.github.io\"><script type="text/javascript" src="interactions.js"></script>
+      <base href = "https://fengxiong322.github.io/"><script type="text/javascript" src="interactions.js"></script>
       <link rel="icon" href="favicon.ico">
       <link rel="stylesheet" href="htmllayout.css">
    </head>
