combine lesson1 and 2

--- a/OOP/OOP-L1-Feng/OOPLesson1.html
+++ b/OOP/OOP-L1-Feng/OOPLesson1.html
@@ -179,6 +179,10 @@
   <p>More examples can be found at</p>
   <a href = "https://github.com/fengxiong322/fengxiong322.github.io/tree/master/OOP/OOP-L1-Feng/Exercise2">Exercise Set 2</a>
   <a href = "https://github.com/fengxiong322/fengxiong322.github.io/tree/master/OOP/OOP-L1-Feng/Exercise3">Exercise Set 3</a>
+         <h1>Common Interactions With Classes</h1>
+    <p>Most of the time, Classes should keep their variables private. As we talked about in Exercise 1, this improves the security of your variables. However, we still want to be able to edit these variables, or else there will be no way to interact with the information in the class. So how do we achieve this?</p>
+    <h2>Accessors And Mutators</h2>
+    <p>Everyone, including you, makes use of Accessors and Mutators. The screen that is projecting this text to you is an accessor method. It tells other things what it contains. But the computer would be pretty useless if all it could do was display something. We also want to be able to interact with it. We want to edit something, and the outcome be very predictable. A laptop comes with a keyboard, and a track pad, and you can add other peripherals like a mouse to interact with the laptop. These items are mutators. They mutate the data within the object, and thus causes the accessor method do display something different.</p>
   </article>
 </section>
 </body>
