--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <style type="text/css">
       iframe{
         width:100%;
-        height: 100%;
+        height:1000px;
       }
     </style>
   </head>
