--- a/Arrays/arraysandarraylists.html
+++ b/Arrays/arraysandarraylists.html
@@ -43,7 +43,58 @@
     <p>In this article, you will learn what arrays and ArrayLists are, and their practical applications.</p>
     <h2>Arrays</h2>
     <p>So what really is an array? An array is a container, that is capable of holding a group of things. Imagine you wanted to represent a highway full of cars. Sure, you can create variables for each Car object, but what happens when you have 10 cars? 100 cars? 1000 cars? Your code would quickly become messy. The solution? Arrays.</p>
-    <p></p>
+    <p>To see an array in action, lets simulate a very simple road. Lets start by creating our Car class. For our purposes, we will just define the color of the car</p>
+    <pre class = codeSample>
+public class Car{
+  private String color;
+
+  public Car(String newColor){
+    color = newColor;
+  }
+
+  public String getColor(){
+    return color;
+  }
+
+  public boolean equals(Car anotherCar){//If two cars have the same color, they are considered to be the same car
+    if(this.getColor() == anotherCar.getColor())
+      return true;
+  }
+}
+</pre>
+    <p>If you do not understand the code above, you may want to begin at <a href = "OOP/OOP-L1-Feng/OOPLesson1.html">OOP Lesson 1</a>. So now we have defined a Car. Next we want to create a road. A road holds cars.</p>
+<pre class = codeSample contenteditable="true">
+public class Road{
+  <b>Car[] road; //Our road is defined as an array of cars. General syntax: "Object/primitive data type" [] "variable name"</b>
+
+  public Road(int size){
+    <b>road = new Car[size]; //This tells the JVM(Java Virtual Machine) to set aside a certain amout of space, enough to fit each car. For now they are empty</b>
+  }
+
+  //This allows us to set a Car at a certain index in the array.
+  public boolean addCar(Car newCar, int position){
+    //Lets read this method in plain english
+    if(road[position] == null){ //If the specified position of our road is empty
+      road[position] = newCar;//Then set that specified position on the road as our new car
+      return true;// Tells use that the car was successfully placed
+    }
+    return false;//If the position on the road was filled, it will tell us that the new car could not be placed
+  }
+
+  //Drives all cars forward.
+  public void driveCars(){
+    <b>//For you to implement. We want to move all cars forward by one position. The first position will become null, and cars at the end of the array drive off the road</b>
+    <b>//Here are some important things to know about Arrays</b>
+    <b>//Each section of the array is defined by an index, a number associated with it to help the program identify its location</b>
+    <b>//Arrays are 0-indexed. This means that we start counting from 0, and not 1</b>
+    <b>//You can find the size of the array with "road.length". You can find the last index by subtracting one from that</b>
+    <b>//You will need to understand how for loops work for this activity.</b>
+  }
+}
+</pre>
+<button onclick="displayAnswer('road')">Compare</button>
+<iframe class = "answers" id = 'road' src = "Arrays/Road.java"></iframe>
+
   </article>
 </section>
 
