--- a/SearchSort/searchsort.html
+++ b/SearchSort/searchsort.html
@@ -59,7 +59,10 @@
     <img href = "idk">
     <p>As you can see, each integer was categorized into a bucket. This is really helpful, because it breaks our original problem into subgroups. After each element is sorted into a seperate bucket, we can manipulate it it many different ways. The first way we can sort each individual bucket is a selection/insertion sort. More on selection sort here: <a href = "SearchSort/searchsort.html#selection"></a>. You can also find information on insertion sort <a></a>. You may be wondering about the time complexity of this bucket sort. Because this algorithm uses a selection/insertion sort, wouldn't the time complexity be slower than O(n<sup>2</sup>)? Although the worst case scenario for a bucket sort is indeed O(n<sup>2</sup>), it's average time is optimized. If you use the bucket sort in the correct way, an O(n<sup>2</sup>) solution will be very rare. To see why lets take a look at what the bucket sort does.</p>
     <!--TODO: Add a bucket sort picture-->
-    <p>In the diagram above, we realize that the selection sort</p>
+    <p>In the diagram above, we realize that the selection sort can be optimized. This is because the algorithm does not have to travel through the entire array. Most of the work has already been done by the bucketsort.</p>
+    <p>However, unlike comparison sorts, require some understanding of the range of your data. If you have no idea what kind of numbers may appear, a bucket sort may not be suitable. Before choosing to use bucket sort, you need to do a few checks. First of all, you need to confirm a range of the data set. For instance, a percentage. Percents are normalized and are typically between 0% and 100%. Another thing to look out for is distribution. If we had a dataset of percentages, but all of them are within 95%-100%, it wouldnt make sense to create buckets for 0%-9%, 10%-19%, 20%-29% and so on.</p>
+
+    <!-- TODO: Interactive bucket sort implementation -->
 
   </article>
 </section>
