Added array content

--- a/index.html
+++ b/index.html
@@ -9,20 +9,21 @@
 	</head>
 
 	<body><nav>
-		<button class= "menubutton" onclick = "sideBar()"></button>
-	   <a class = "current" href= "index.html">Home</a>
-	   <p></p>
-	   <a href = "OOP/OOPmenu.html">OOP</a>
-	   <p></p>
+		<ul>
+		<li><button class= "menubutton" onclick = "sideBar()"></button></li>
+	   <li><a class = "current" href= "index.html">Home</a>
+	   <p></p></li>
+	   <li><a href = "OOP/OOPmenu.html">OOP</a>
+	   <p></p></li>
 		 <a href="Recursion/recursion.html">Recursion</a>
-		 <p></p>
-		 <a href="Arrays/arraysandarraylists.html">Arrays and Arraylists</a>
-		 <p></p>
-		 <a href="SearchSort/searchsort.html">Search and Sort</a>
-		 <p></p>
-	   <a href="Projects/projects.html">Projects</a>
-	   <p></p>
-	   <a href="about.html">About</a>
+		 <p></p></li>
+		 <li><a href="Arrays/arraysandarraylists.html">Arrays and Arraylists</a>
+		 <p></p></li>
+		 <li><a href="SearchSort/searchsort.html">Search and Sort</a>
+		 <p></p></li>
+	   <li><a href="Projects/projects.html">Projects</a>
+	   <p></p></li>
+	   <li><a href="about.html">About</a></li>
 	 </nav>
 
 		<header>
