--- a/Arrays/arraysandarraylists.html
+++ b/Arrays/arraysandarraylists.html
@@ -95,6 +95,17 @@ public class Road{
 <button onclick="displayAnswer('road')">Compare</button>
 <iframe class = "answers" id = 'road' src = "Arrays/Road.java"></iframe>
 
+<h1>ArrayLists</h1>
+<p>The next topic will be arraylists. An arraylist is a convient resizable array. Normal arrays are stuck with one size, and to change it, you have to manually create a new array of a different size and copy the original contents. If you are not sure how large you want your array to be, an arraylist can be very helpful. Here is an example.</p>
+<p>Imagine you wanted to create a program that will help someone build a restaurant menu:</p>
+<ul>
+  <li>Chicken Soup</li>
+  <li>Fish &amp; Chips</li>
+  <li>Boneless Wings</li>
+  <li>Steak</li>
+  <li>mushroom sirlon</li>
+</ul>
+<p>Here there are 5 items. But this may not always be the case. at some point, they may want to add some extra menu option that they forgot. Or another option for vegans.</p>
   </article>
 </section>
 
