--- a/index.html
+++ b/index.html
@@ -9,21 +9,20 @@
 	</head>
 
 	<body><nav>
-		<ul>
-		<li><button class= "menubutton" onclick = "sideBar()"></button></li>
-	   <li><a class = "current" href= "index.html">Home</a>
-	   <p></p></li>
-	   <li><a href = "OOP/OOPmenu.html">OOP</a>
-	   <p></p></li>
+		<button class= "menubutton" onclick = "sideBar()"></button>
+	   <a class = "current" href= "index.html">Home</a>
+	   <p></p>
+	   <a href = "OOP/OOPmenu.html">OOP</a>
+	   <p></p>
 		 <a href="Recursion/recursion.html">Recursion</a>
-		 <p></p></li>
-		 <li><a href="Arrays/arraysandarraylists.html">Arrays and Arraylists</a>
-		 <p></p></li>
-		 <li><a href="SearchSort/searchsort.html">Search and Sort</a>
-		 <p></p></li>
-	   <li><a href="Projects/projects.html">Projects</a>
-	   <p></p></li>
-	   <li><a href="about.html">About</a></li>
+		 <p></p>
+		 <a href="Arrays/arraysandarraylists.html">Arrays and Arraylists</a>
+		 <p></p>
+		 <a href="SearchSort/searchsort.html">Search and Sort</a>
+		 <p></p>
+	   <a href="Projects/projects.html">Projects</a>
+	   <p></p>
+	   <a href="about.html">About</a>
 	 </nav>
 
 		<header>
