--- a/Arrays/arraysandarraylists.html
+++ b/Arrays/arraysandarraylists.html
@@ -33,7 +33,7 @@
     <u><b><p>TABLE OF CONTENTS</p></b></u>
     <table style="width:100%">
       <tr>
-        <td class = "current"><a href="Arrays/arraysandarraylists.html">Welcome to GUI!</a></td>
+        <td class = "current"><a href="Arrays/arraysandarraylists.html">Arrays and ArrayLists</a></td>
       </tr>
     </table>
   </aside>
