--- a/index.html
+++ b/index.html
@@ -38,8 +38,6 @@
       </tr><tr>
         <td><a href = "OOP/OOPmenu.html">OOP</a></td>
       </tr><tr>
-        <td><a href = "GUI/GUImenu.html">GUI</a></td>
-      </tr><tr>
         <td><a href="Recursion/recursion.html">Recursion</a></td>
       </tr><tr>
         <td><a href="Arrays/arraysandarraylists.html">Arrays and Arraylists</a></td>
@@ -54,8 +52,8 @@
   </aside>
 
   <article>
-    <img src="Word Art.png" style="width:800px;height:500px;">
-    <p> You can explore some of past work or more about me from the side bar on the left, or you can use the top navigation bar</p>
+    <p>Welcome to my portfolio! Head over to one of the lesson pages to learn more about java, or you can choose to learn more about me and my projects.</p>
+    <p>Thanks to <a href = "https://www.w3schools.com/tags/">W3schools</a> for providing a great html, js and css resource. I learned alot of syntax from it. I highly recommend checking them out if you ever want to build your own website!</p>
   </article>
 </section>
 
