Change format for interactive panes

--- a/OOP/Advanced1/advanced.html
+++ b/OOP/Advanced1/advanced.html
@@ -60,7 +60,7 @@
     <p>In java, polymorphism allows subclass objects to be assigned to a reference of its superclass. So what does this mean? If you wanted to talk about a bear, what could you say? There are many ways to refer to the bear. We could call it a bear, but we could also classify it by its "superclass", and just say, that "animal". This is completely valid. Something polymorphism doesnt allow for is for an object of the super class to be put in a reference of a subclass. This is the equivilent of calling any animal, "bear". The animal may not necessarily be a bear.</p>
     <p>Now that you understand what polymorphism is, when would you use it?</p>
     <p>My first reason would be that it is easier to use. For instance, imagine you ran a zoo. You want to create a database of all of the different animals you have in your zoo. WIthout polymorphism, every type of animal needs its own array to hold it. This is very inefficient, and it is hard for you to keep track as your zoo continues to add new animals. However, by using polymorphism, and making every animal have an Animal reference, this problem becomes rather trivial. To test if you understand this concept, try to code this below:</p>
-    <pre class = "codeSample" contenteditable="true">
+    <pre class = "interactive" contenteditable="true">
 Animal[] zooAnimals = new Animal[3];
 //Assume that the Animal class has already been coded. The Animal class has a few subclasses: Monkey, Tiger, and Zebra.
 //Your task is to create objects of these classes and put them into the zooAnimals array.</pre>
