--- a/OOP/OOP-L1-Feng/OOPLesson1.html
+++ b/OOP/OOP-L1-Feng/OOPLesson1.html
@@ -96,7 +96,7 @@ public class Animal{
 
   <h2>Your Turn!</h2>
   <p>To practise this concept, try to represent a Car, a House, and a Student. To help you, I will provide a template for you to edit:</p>
-  <pre class = "codeSample" contenteditable="true">
+  <pre class = "interactive" contenteditable="true">
 public class Car{
   //Create variables for: brand, model, kilometers, gas, tankCapacity
 
@@ -121,7 +121,7 @@ public class Car{
 }</pre>
 <button onclick = "displayAnswer('car')">Compare</button>
 <iframe class = "answers" id = car src = "OOP\OOP-L1-Feng\Exercise1\Car.java"></iframe>
-<pre class = "codeSample" contenteditable="true">
+<pre class = "interactive" contenteditable="true">
 public class House{
   //Create the follow variables:    street_num, street name, city name, province name, postal_code, size(decimal number), detached(true or false), stories(number)
   //NOTE: remember encapsulation
