--- a/Arrays/arraysandarraylists.html
+++ b/Arrays/arraysandarraylists.html
@@ -63,7 +63,7 @@ public class Car{
 }
 </pre>
 <p>If you do not understand the code above, you may want to begin at <a href = "OOP/OOP-L1-Feng/OOPLesson1.html">OOP Lesson 1</a>. So now we have defined a Car. Next we want to create a road. A road holds cars.</p>
-<pre class = codeSample contenteditable="true">
+<pre class = "interactive" contenteditable="true">
 public class Road{
   <b>Car[] road; //Our road is defined as an array of cars. General syntax: "Object/primitive data type" [] "variable name"</b>
 
