--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -38,6 +38,8 @@
   </aside>
 
   <article>
+    <h1>Future Projects</h1>
+    <p>I may attempt to build a neural network up from scratch, that will recoginse patterns in 2by2 array of grayscale pixels</p>
     <h1>My Projects</h1>
     <p>This is a list of all my projects, organized from most recent to earliest project</p>
     <h1>Algorithm Implementation</h1>
