--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -42,6 +42,8 @@
     <p>I may attempt to build a neural network from scratch, that will recognize patterns in 2by2 array of grayscale pixels</p>
     <h1>My Projects</h1>
     <p>This is a list of all my projects, organized from most recent to earliest project</p>
+    <h1> Grade 12 ISP</h1>
+    <p><a href = "https://github.com/fengxiong322/ICS12ISP" target = "_blank">Source Code</a></p>
     <h1>Algorithm Implementation</h1>
     <p>This is a project to discover different algorithms. I started with a few simple algorithms, and I am currently working on a fft implementation. The repository is <a href = "https://github.com/fengxiong322/Algorithm-Implementations" target = "_blank">here</a></p>
     <h1>Discord Bot</h1>
