--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -43,6 +43,9 @@
     <h1>My Projects</h1>
     <p>This is a list of all my projects, organized from most recent to earliest project</p>
     <h1> Grade 12 ISP</h1>
+    <p>Teaches children how to maintain a positive mindset after failure and learn from mistakes after making them. We will create a platformer that will teach younger children about negative thoughts they might face. Every type of negative thoughts (self doubt, all or nothing, catastrophizing, disqualifying positives) will be represented by an obstacle in the game. Through the interaction with ingame characters and the story the player will gain hints and learn strategies to overcome each obstacle and escape the loop of negative thoughts.</p>
+    <p>I contributed to the program design and planning</p>
+    <img src="intro2.png" alt="game">
     <p><a href = "https://github.com/fengxiong322/ICS12ISP" target = "_blank">Source Code</a></p>
     <h1>Algorithm Implementation</h1>
     <p>This is a project to discover different algorithms. I started with a few simple algorithms, and I am currently working on a fft implementation. The repository is <a href = "https://github.com/fengxiong322/Algorithm-Implementations" target = "_blank">here</a></p>
